[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game/PopUpMessages/SnakeBattleResult.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/FFFFORWA.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Snakes/SnakesBattle/SnakeBattle.gd" type="Script" id=3]
[ext_resource path="res://Game/GameScenesAssets/Bin.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/GameScenesAssets/BenchFront.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/GameScenesAssets/Tree-1-4.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Background/texture.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="SnakeBattle" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -204.0
margin_top = -109.0
margin_right = 202.0
margin_bottom = 107.0
color = Color( 1, 0.968627, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -204.0
margin_top = -109.0
margin_right = 202.0
margin_bottom = -60.0
color = Color( 0.364706, 0.568627, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -203.0
margin_top = -60.0
margin_right = 201.0
margin_bottom = -52.0
color = Color( 0.937255, 0.901961, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="Tree-1-4" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -185, -76 )

[node name="Tree-1-5" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -181, -94 )

[node name="Tree-1-6" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -150, -93 )

[node name="Tree-1-7" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -123, -103 )

[node name="Tree-1-8" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -91, -103 )

[node name="Tree-1-9" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -62, -103 )

[node name="Tree-1-10" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -29, -105 )

[node name="Tree-1-11" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 0, -103 )

[node name="Tree-1-12" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 25, -96 )

[node name="Tree-1-13" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 44, -84 )

[node name="Tree-1-14" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 54, -96 )

[node name="Tree-1-15" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 74, -83 )

[node name="Tree-1-16" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 102, -103 )

[node name="Tree-1-17" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 105, -86 )

[node name="Tree-1-18" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 131, -88 )

[node name="Tree-1-19" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 153, -103 )

[node name="Tree-1-20" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 158, -84 )

[node name="Tree-1-21" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 183, -83 )

[node name="Tree-1-22" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 179, -102 )

[node name="Tree-1-23" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 19, -80 )

[node name="Tree-1-24" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -4, -84 )

[node name="Tree-1-25" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -27, -79 )

[node name="Tree-1-26" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -50, -86 )

[node name="Tree-1-27" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -69, -78 )

[node name="Tree-1-28" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -88, -85 )

[node name="Tree-1-29" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -111, -78 )

[node name="Tree-1-4" parent="YSort/Tree-1-29" instance=ExtResource( 6 )]
position = Vector2( -35, 0 )

[node name="Bench" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 117, -68 )

[node name="Bin" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 75, -64 )

[node name="YSort2" type="YSort" parent="."]

[node name="Texture" type="Sprite" parent="YSort2"]
position = Vector2( -129, -18 )
texture = ExtResource( 7 )

[node name="Texture2" type="Sprite" parent="YSort2"]
position = Vector2( -130, 68 )
texture = ExtResource( 7 )

[node name="Texture3" type="Sprite" parent="YSort2"]
position = Vector2( 1, -15 )
texture = ExtResource( 7 )

[node name="Texture4" type="Sprite" parent="YSort2"]
position = Vector2( -4, 71 )
texture = ExtResource( 7 )

[node name="Texture5" type="Sprite" parent="YSort2"]
position = Vector2( 126, 70 )
texture = ExtResource( 7 )

[node name="Texture6" type="Sprite" parent="YSort2"]
position = Vector2( 132, -15 )
texture = ExtResource( 7 )

[node name="TimeLeft" type="Label" parent="."]
margin_left = -20.0
margin_top = -88.0
margin_right = 20.0
margin_bottom = -66.0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="TimeLeft"]
wait_time = 10.0
one_shot = true

[node name="PlayerPress" type="TouchScreenButton" parent="."]
position = Vector2( -150, -38 )
shape = SubResource( 1 )

[node name="SnakePress" type="TouchScreenButton" parent="."]
position = Vector2( 76, -38 )
shape = SubResource( 1 )

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( -118, 0 )

[node name="SnakePosition" type="Position2D" parent="."]
position = Vector2( 110, 0 )

[node name="SnakeBattleResult" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="timeout" from="TimeLeft/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="PlayerPress" to="." method="_on_PlayerPress_pressed"]
[connection signal="pressed" from="SnakePress" to="." method="_on_SnakePress_pressed"]

[editable path="SnakeBattleResult"]
